[gd_scene load_steps=15 format=3 uid="uid://bh05ghfu3k26p"]

[ext_resource type="Script" path="res://core/card_container.gd" id="1_43o8o"]
[ext_resource type="Texture2D" uid="uid://duhy1270mcnoh" path="res://assets/general/card_back.png" id="2_gdrm8"]
[ext_resource type="Texture2D" uid="uid://cralqw20welua" path="res://assets/card/test/attack.png" id="3_o0kjv"]
[ext_resource type="Texture2D" uid="uid://v4re3fgaycap" path="res://assets/general/card_frame.png" id="4_wd6tl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8iqph"]
size = Vector2(94, 142)

[sub_resource type="Animation" id="Animation_xgvxh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.6, 1.6)]
}

[sub_resource type="Animation" id="Animation_gu5p6"]
resource_name = "discard"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, -150), Vector2(3000, -150)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.940172]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.6, 1.6), Vector2(0.8, 0.8)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"discard"
}]
}

[sub_resource type="Animation" id="Animation_y1gnr"]
resource_name = "draw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(433, 2.08165e-12), Vector2(269, -47), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ddwtx"]
resource_name = "left_offset"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(-53, 2.08165e-12), Vector2(-66, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.0872665]
}

[sub_resource type="Animation" id="Animation_snw22"]
resource_name = "left_offset_back"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-66, 2.08165e-12), Vector2(-53, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_l5m4o"]
resource_name = "play"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(-2.08165e-12, -150)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 8),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.6, 1.6), Vector2(0.6, 0.6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_v04od"]
resource_name = "right_offset"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(53, 2.08165e-12), Vector2(66, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0872665]
}

[sub_resource type="Animation" id="Animation_cy1ce"]
resource_name = "right_offset_back"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(66, 2.08165e-12), Vector2(53, 2.08165e-12), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_myyhp"]
_data = {
"RESET": SubResource("Animation_xgvxh"),
"discard": SubResource("Animation_gu5p6"),
"draw": SubResource("Animation_y1gnr"),
"left_offset": SubResource("Animation_ddwtx"),
"left_offset_back": SubResource("Animation_snw22"),
"play": SubResource("Animation_l5m4o"),
"right_offset": SubResource("Animation_v04od"),
"right_offset_back": SubResource("Animation_cy1ce")
}

[node name="Card" type="Node2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_43o8o")

[node name="Local" type="Node2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(1.6, 1.6)

[node name="DetectArea" type="Area2D" parent="Local"]
z_index = 1
position = Vector2(-2.08165e-12, -2.08165e-12)
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Local/DetectArea"]
position = Vector2(-6.93883e-13, -6.93883e-13)
shape = SubResource("RectangleShape2D_8iqph")

[node name="CardBack" type="Sprite2D" parent="Local"]
position = Vector2(-6.93883e-13, -6.93883e-13)
scale = Vector2(2, 2)
texture = ExtResource("2_gdrm8")

[node name="CardArt" type="Sprite2D" parent="Local"]
position = Vector2(2.08165e-12, -71)
scale = Vector2(2, 2)
texture = ExtResource("3_o0kjv")

[node name="CardFrame" type="Sprite2D" parent="Local"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(2, 2)
texture = ExtResource("4_wd6tl")

[node name="Container" type="Control" parent="Local"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6, 1.6)
pivot_offset = Vector2(48, 72)
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Local/Container"]
layout_mode = 2
offset_left = -32.0
offset_top = -44.0937
offset_right = 68.0
offset_bottom = 99.9062
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Local/Container/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 58)
layout_mode = 2
mouse_filter = 2

[node name="CardNameText" type="RichTextLabel" parent="Local/Container/VBoxContainer"]
custom_minimum_size = Vector2(90, 16)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font=\"res://assets/font/dpcomic.ttf\"][color=#271c40][outline_size=2][font_size=14][outline_color=white][center]Spread the Plague[/center][/outline_color][/font_size][/outline_size][/color][/font]
"
fit_content = true
scroll_active = false
custom_effects = [null]

[node name="DescText" type="RichTextLabel" parent="Local/Container/VBoxContainer"]
custom_minimum_size = Vector2(100, 65)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font=res://assets/font/retganon.ttf][font_size=16][center]Deal 1 damage.[/center]
[/font_size][/font]"
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Local"]
libraries = {
"": SubResource("AnimationLibrary_myyhp")
}

[node name="SelectCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="Local/DetectArea" to="." method="_on_detect_area_mouse_entered"]
[connection signal="mouse_exited" from="Local/DetectArea" to="." method="_on_detect_area_mouse_exited"]
[connection signal="timeout" from="SelectCooldown" to="." method="_on_select_cooldown_timeout"]
